# keyvaluestore-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  docs-pages.yml
src/: aws_sdk_dynamodbstore.rs  backendtest.rs  dynamodbstore.rs  dynstore.rs  lib.rs  memorystore.rs  readcache.rs  redisstore.rs  rusoto_dynamodbstore.rs  rusotostore.rs
