[package]
name = "keyvaluestore"
version = "0.1.0"
authors = ["Christopher Brown <ccbrown112@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1.32"
simple-error = "0.2.1"
redis = { version = "0.21.0", features = ["tokio-comp"], optional = true }
# we use a fork to work around https://github.com/rusoto/rusoto/issues/1774
rusoto_core = { git = "https://github.com/sportsball-ai/rusoto", rev = "98e53f2ec0f21f027d8cb7a57958ee3918cd2c44", optional = true }
rusoto_credential = { git = "https://github.com/sportsball-ai/rusoto", rev = "98e53f2ec0f21f027d8cb7a57958ee3918cd2c44", optional = true }
rusoto_dynamodb = { git = "https://github.com/sportsball-ai/rusoto", rev = "98e53f2ec0f21f027d8cb7a57958ee3918cd2c44", optional = true }
bytes = "1.0"
rand = "0.7.3"
base64 = "0.12.2"
aws-sdk-dynamodb = { version = "0.21.0", optional = true }

[features]
aws-sdk = ["dep:aws-sdk-dynamodb"]
redis = ["dep:redis"]
rusoto = ["dep:rusoto_core", "dep:rusoto_credential", "dep:rusoto_dynamodb"]

[dev-dependencies]
serial_test = "0.4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
