[package]
name = "keyvaluestore"
version = "1.0.0"
authors = ["Christopher Brown <ccbrown112@gmail.com>"]
edition = "2021"
rust-version = "1.70"

[dependencies]
async-trait = "0.1.32"
simple-error = "0.2.1"
redis = { version = "1.0.0-rc.3", features = [
    "tokio-comp",
    "aio",
], optional = true }
bytes = "1.0"
rand = "0.7.3"
base64 = "0.12.2"
aws-sdk-dynamodb = { version = "1.9", optional = true }
tracing = "0.1.37"
itertools = "0.12.0"

[features]
default = ["aws-sdk"]
aws-sdk = ["dep:aws-sdk-dynamodb"]
redis = ["dep:redis"]

[dev-dependencies]
serial_test = "0.4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
